# DELILA

./: .gitignore  .gitmodules  CFD.conf  HPGe.conf  Install.md  LED.xml  PHA.conf  PSD.conf  README.md  Slave.conf  Solar.conf  SolarCellTest.xml  Wave.conf  eliade.xml  emu.xml  example_vme.xml  ifin.xml  ifinCFD.xml  ifinSolarCell.xml  ifinWithWaveform.xml  merger.conf  merger.xml  test.xml  timeCheck.conf
Calibration/: dummy.cpp  reader.cpp
Components/Dispatcher/: Dispatcher.cpp  Dispatcher.h  Makefile
Components/Dispatcher2to2/: Dispatcher.cpp  Dispatcher.h  Makefile
Components/Dispatcher3to2/: Dispatcher.cpp  Dispatcher.h
Components/Dispatcher4to2/: Dispatcher.cpp  Dispatcher.h
Components/slibs/: CMakeLists.txt  SISip.conf  conf_MADC32_0x66660000.json  cont_2718.cpp  cont_SISeth.cpp  dev_MADC32.cpp  dev_MTDC32.cpp  install.sh
Controller/: main-es5.113cac93a528b427f182.js
DAQController/: 3rdpartylicenses.txt  index.html  main-es2015.113cac93a528b427f182.js  styles.8fbd16991788451a9268.css
controller/: index.html  main-es2015.29bc0c5ee28d38980fe1.js  main-es2015.91201cf43aaff94cc8e0.js  main-es2015.aeb98d82972f280120a7.js  main-es2015.cc46de4f95f56575631b.js  main-es5.29bc0c5ee28d38980fe1.js  main-es5.91201cf43aaff94cc8e0.js  main-es5.aeb98d82972f280120a7.js  main-es5.cc46de4f95f56575631b.js  main.89a5b8c777c575049ccf.js  main.9282f879e444f37607fb.js  main.a50664d270d96b28bcd3.js  main.d605a7629d7c6b1604fc.js  main.f1e56735632a5955b70f.js  polyfills.7a510facf265f3fb0608.js  runtime.084ed32f75788c431d4a.js  styles.dbb9c5c374ba7650b689.css
(+120 files in other folders)
